[gd_scene load_steps=7 format=3 uid="uid://c4tt0mgxvgw5g"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="1_nmwu1"]
[ext_resource type="Script" uid="uid://digyskaas76gd" path="res://components/ui/log_in_ui.gd" id="2_eyvdy"]
[ext_resource type="Texture2D" uid="uid://gl0rjxkrh4wh" path="res://assets/logos/AOLlogoMaster.png" id="4_6fwkw"]
[ext_resource type="FontFile" uid="uid://deimmaj7ejh4l" path="res://assets/fonts/CapitalisTypOasis.ttf" id="5_hcclx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nfsrt"]
bg_color = Color(0, 0.435981, 0.736537, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0.616993, 0.765051, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmwu1"]
bg_color = Color(0, 0.670588, 0.968627, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.129492, 0.365382, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="LogInUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_nmwu1")
script = ExtResource("2_eyvdy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_nfsrt")

[node name="LoggingInPanel" type="Panel" parent="Panel"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_nmwu1")

[node name="LoggingInLabel" type="Label" parent="Panel/LoggingInPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -7.5
offset_right = 38.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Locking in"

[node name="ProfileVBoxContainer" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -83.5
offset_right = 85.5
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2

[node name="ProfileRow" type="HBoxContainer" parent="Panel/ProfileVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="NewProfilePanel" type="Panel" parent="Panel/ProfileVBoxContainer/ProfileRow"]
custom_minimum_size = Vector2(170, 170)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/ProfileVBoxContainer/ProfileRow/NewProfilePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="NewProfileButton" type="Button" parent="Panel/ProfileVBoxContainer/ProfileRow/NewProfilePanel/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " New Profile "

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 507.0
offset_top = 38.0
offset_right = 635.0
offset_bottom = 166.0
texture = ExtResource("4_6fwkw")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.023
anchor_right = 0.5
anchor_bottom = 0.023
offset_left = -155.0
offset_top = 136.096
offset_right = 163.0
offset_bottom = 174.096
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_hcclx")
theme_override_font_sizes/font_size = 36
text = "Alpha OnLine"
